--- a/login.html
+++ b/login.html
@@ -4,52 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tela de login</title>
-    <style>
-        body{
-            font-family: Arial, Helvetica, sans-serif;
-            background-image: linear-gradient(45deg, rgb(255, 255, 255), black);
-        }
-        div{
-            background-color: rgba(0, 0, 0, 0.9);
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%,-50%);
-            padding: 80px;
-            border-radius: 15px;
-            color: #fff;
-        }
-        input{
-            padding: 15px;
-            border: none;
-            outline: none;
-            font-size: 15px;
-        }
-        button{
-            background-color: dodgerblue;
-            border: none;
-            padding: 15px;
-            width: 100%;
-            border-radius: 10px;
-            color: white;
-            font-size: 15px;
-            
-        }
-        button:hover{
-            background-color: deepskyblue;
-            cursor: pointer;
-        }
-    </style>
+    <link
+    rel="stylesheet"
+    media="screen and (max-width: 768px)"
+    href="css/mobile.css"
+  />
+    <title>Document</title>
 </head>
-<body>
-    <div>
-        <h1>Login</h1>
-        <input type="text" placeholder="Nome">
-        <br><br>
-        <input type="password" placeholder="Senha">
-        <br><br>
-        <button>Enviar</button>
-    </div>
+<body class="login-background">
+    <form class="login-form" action="">
+        <h1 class="title-login">Login</h1>
+        <input placeholder="E-mail" class="login-email" type="email">
+        <input placeholder="Senha" class="login-password" type="password">
+        <button class="login-button" type="submit"><a href="http://127.0.0.1:5500/notificacoes.html">Entrar</a></button>
+    </form>
 </body>
 </html>
