--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <li><a href="#showcase">Início</a></li>
           <li><a href="#companies">Clientes</a></li>
           <li><a href="#gallery">Relatos</a></li>
-          <li class="login-link"><a href="http://127.0.0.1:5500/login.html">Fazer login</a></li>
+          <li class="login-link"><a href="./login.html">Fazer login</a></li>
         </ul>
       </div>
     </nav>
@@ -153,7 +153,7 @@
     <footer id="footer">
       <h3>Contato</h3>
       <p class="contact-email">Email: atendimento@oficinavm.com</p>
-      <a href="mailto:viniciosnunes@gmail.com" class="contact-button">Entre em contato</a> 
+      <a href="mailto:oficina_vm@outlook.com" class="contact-button">Entre em contato</a> 
       <p class="openning-hour">Seg a Sex das 9h às 18h</p>
       <p>Telefone: (11) 2540 8985</p>
       <br />
