--- a/notificacoes.html
+++ b/notificacoes.html
@@ -1,26 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
-    rel="stylesheet"
-    media="screen and (max-width: 768px)"
-    href="css/mobile.css"
-  />
+      rel="stylesheet"
+      media="screen and (max-width: 768px)"
+      href="css/mobile.css"
+    />
+    <script type="text/javascript" src="js/api.js"></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
+      integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
     <title>Document</title>
-</head>
-<body class="not-background">
-    <div class="not-container">
-        <div>
-            <h3>Nome da ordem</h3>
-            <p>Manutenção de veículo</p>
-        </div>
-        <div>
-            <h3>Status</h3>
-            <p>Finalizada</p>
-        </div>
-    </div>
-</body>
+  </head>
+  <body class="not-background">
+    <div class="not-container"id="notificacao">
+
+    
+  </div>
+  <div>
+  
+  </body>
 </html>
